export interface IAdditionalInfo {
  readonly [key: string]: unknown;
}
